--- a/templates/tester/mailbox.html
+++ b/templates/tester/mailbox.html
@@ -264,11 +264,11 @@
                   <tr>
 
                     <td class="mailbox-star"><a href="#"><i class="fas fa-star-o text-warning"></i></a></td>
-                    <td class="mailbox-name"><a href="http://10.0.0.141:8089/swagger-ui.html#/%E6%8E%A5%E5%8F%A3%E5%8F%82%E6%95%B0/deliveryCompleteUsingPOST">配送工具</a></td>
-                    <td class="mailbox-subject"><b>配送完成</b> -
-                        <input type="text" class="col-5" id="sub_project_id" name="sub_project_id" size="10" placeholder="输入子任务id" value="">
+                    <td class="mailbox-name"><a href="#">链接转换工具</a></td>
+                    <td class="mailbox-subject"><b>短链转长链</b> -
+                        <input type="text" class="col-9" id="my_link" name="small_link" size="30" placeholder="输入短链" value="">
                     </td>
-                    <td class="mailbox-attachment"> <a class="btn btn-success btn-sm" onclick="delivery()"><i class="fas fa-play"></i>执行</a></td>
+                    <td class="mailbox-attachment"> <a class="btn btn-success btn-sm" onclick="update_link()"><i class="fas fa-play"></i>执行</a></td>
 
                   </tr>
                     <tr>
